[package]
name = "influxrs"
description = "Provides a client for writing and reading data from InfluxDB 2.0"
version = "0.1.1"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["database", "influx", "timeseries", "client", "async"]
categories = ["database"]
repository = "https://github.com/ijagberg/influx"
homepage = "https://github.com/ijagberg/influx"

[dependencies]
log = "0.4.8"
chrono = "0.4.19"
serde = { version = "1.0.116", features = ["derive"] }
csv = "1.1.6"
isahc = "1.4.0"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["full"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
