[package]
name = "influxrs"
description = "Provides a client for writing and reading data from InfluxDB 2.0"
version = "2.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["database", "influx", "timeseries", "client", "async"]
categories = ["database"]
repository = "https://github.com/ijagberg/influx"
homepage = "https://github.com/ijagberg/influx"

[dependencies]
log = "0.4.8"
serde = { version = "1.0.210", features = ["derive"] }
csv = "1.3.0"
isahc = { version = "1.7.2", optional = true }

[features]
client = ["dep:isahc"]

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"

[features]
static = ["isahc/static-ssl", "isahc/static-curl"]
